starts work with components

--- a/css/media-2.css
+++ b/css/media-2.css
@@ -1,6 +1,7 @@
 
 /* Mobile */
 /* Extra small */
+/* Class Infix - None */
 /* @media (max-width: 480px) { */
 @media (max-width: 575px) {
     /* styles */
@@ -8,30 +9,35 @@
 
 /* Extra small devices */
 /* Small */
+/* Class Infix - sm */
 @media (min-width: 576px) and (max-width: 767px) {
     /* styles */
 }
 
 /* Small tablets */
 /* Medium */
+/* Class Infix - md */
 @media (min-width: 768px) and (max-width: 991px) {
     /* styles */
 }
 
 /* Large tablets/laptops */
 /* Large */
+/* Class Infix - lg */
 @media (min-width: 992px) and (max-width: 1199px) {
     /* styles */
 }
 
 /* Desctops */
 /* X-Large */
+/* Class Infix - xl */
 @media (min-width: 1200px) and (max-width: 1399px) {
     /* styles */
 }
 
 /* Extra large screens */
 /* XX-Large */
+/* Class Infix - xxl */
 @media (min-width: 1400px) {
     /* styles */
 }
